--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "globals.d.ts"]
+  "include": ["src"]
 }
