--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
     "name": "Travis Aaron Wagner",
     "email": "travis@travisaw.com"
   },
-  "bugs": {
-    "url": "https://github.com/trvswgnr/bs5-lightbox/issues"
-  },
   "description": "A pure JS lightbox gallery plugin for Bootstrap 5 based on the modal and carousel plugins",
-  "homepage": "https://github.com/trvswgnr/bs5-lightbox",
+  "homepage": "https://github.com/w8tcha/bs5-lightbox",
   "keywords": [
     "lightbox",
     "gallery",
@@ -28,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trvswgnr/bs5-lightbox.git"
+    "url": "git+https://github.com/w8tcha/bs5-lightbox.git"
   },
   "type": "module",
   "peerDependencies": {
