--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bs5-lightbox",
-  "version": "2.0.0",
+  "name": "w8tcha/bs5-lightbox",
+  "version": "1.8.5",
   "author": {
     "name": "Travis Aaron Wagner",
     "email": "travis@travisaw.com"
