--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "w8tcha/bs5-lightbox",
+  "name": "@w8tcha/bs5-lightbox",
   "version": "1.8.5",
   "author": {
     "name": "Travis Aaron Wagner",
